Hero height fix on homepage on mobile

--- a/themes/gv_sky/css/global.css
+++ b/themes/gv_sky/css/global.css
@@ -953,9 +953,6 @@ th {
     @media screen and (max-width: 620px) {
       .front .hero-header {
         background-image: url(../images/img-hero-m.jpg); } }
-    @media screen and (max-width: 450px) {
-      .front .hero-header {
-        height: 375px; } }
   .bu .hero-header, .ca .hero-header, .sip .hero-header, .pbx .hero-header, .crm .hero-header, .cb .hero-header {
     background-image: url(../images/img-business.jpg);
     background-position: 80% 0%; }
