--- a/themes/gv_sky/css/sass/_parts/hero.sass
+++ b/themes/gv_sky/css/sass/_parts/hero.sass
@@ -32,8 +32,8 @@
 		+max(620) 
 			background-image: url(../images/img-hero-m.jpg)	
 
-		+max(450)
-			height: 375px
+		// +max(450)
+		// 	height: 375px
 
 	// Business VoIP
 	.bu &,
